# uptimebar

./: LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.github/workflows/: release.yml
assets/brand/: 0001-shared-brand-mark.md  README.md
docs/: ARCHITECTURE.md  PROVIDER-CAPABILITIES.md  PROVIDER-INTEGRATION-NOTES.md  PROVIDER-MATRIX.md  PROVIDERS.md  RELEASING.md  TELEMETRY.md  WATCH4ME-NEEDS.md  uptimebar-ios-system-design.md
src/: icons.ts  popover.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  commands.rs  config.rs  lib.rs  main.rs  notify.rs  poller.rs  state.rs  tray.rs
src-tauri/src/providers/: betterstack.rs  healthchecks.rs  mod.rs  uptimekuma.rs  uptimerobot.rs  watch4me.rs
