[package]
name = "uptimebar"
version = "0.2.0"
description = "Cross-platform menubar/tray uptime notifier"
authors = ["Opaque Research"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (Windows linker quirk).
name = "uptimebar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "macros", "rt"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
# OS keychain (macOS Keychain / Windows Credential Manager) for release builds.
# v4's Apple backend is the default — no extra feature needed.
keyring = "4"
log = "0.4"
env_logger = "0.11"
